Первые классы и цвета

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Заголовок сайта про Git</h1>
+    <header class="header"><h1>Заголовок сайта про Git</h1>></header>
+    <main class="main"><p>Здесь я изучил что такое Git, чем отличается от GitHub, как с ним работать (базово)</p></main>
+    <footer class="footer">Здесь будет футер</footer>
 </body>
 </html>
